<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECE8E8"
    tools:context=".CountryQuiz">

    <Button
        android:id="@+id/RestartButton"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="178dp"
        android:layout_marginRight="178dp"
        android:layout_marginBottom="16dp"
        android:background="#2D3A83"
        android:text="@string/RestartButton"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/NextButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PointsView" />

    <Button
        android:id="@+id/NextButton"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="14dp"
        android:background="#2D3A83"
        android:text="@string/NextButton"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/RestartButton"
        app:layout_constraintTop_toBottomOf="@+id/Points" />

    <TextView
        android:id="@+id/MainQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/MainQuestion"
        android:textColor="#F30606"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Button1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="8dp"
        android:background="#2D3A83"
        android:textColor="#FFFFFF"
        android:textSize="21sp"
        app:layout_constraintBottom_toTopOf="@+id/Button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageTurkey" />

    <Button
        android:id="@+id/Button4"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="306dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="305dp"
        android:background="#2D3A83"
        android:textColor="#FFFFFF"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="@+id/NextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageTurkey" />

    <Button
        android:id="@+id/Button2"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="214dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="214dp"
        android:background="#2D3A83"
        android:textColor="#FFFFFF"
        android:textSize="21sp"
        app:layout_constraintBottom_toTopOf="@+id/BonusQueGirdi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageTurkey" />

    <Button
        android:id="@+id/Button3"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="46dp"
        android:background="#2D3A83"
        android:textColor="#FFFFFF"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="@+id/Button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Button2" />

    <TextView
        android:id="@+id/BonusQuestion"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="107dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="107dp"
        android:text="@string/BonusQuestion"
        android:textColor="#F30606"
        android:textSize="21sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/PointsView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button3" />

    <EditText
        android:id="@+id/BonusQueGirdi"
        android:layout_width="167dp"
        android:layout_height="49dp"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:layout_marginBottom="83dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="21sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/Points"
        app:layout_constraintEnd_toEndOf="@+id/imageTurkey"
        app:layout_constraintStart_toEndOf="@+id/RestartButton"
        app:layout_constraintTop_toBottomOf="@+id/Guess" />

    <TextView
        android:id="@+id/BQAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:text="@string/BQAnswer"
        android:textColor="#000000"
        android:textSize="21sp"
        android:visibility="invisible"
        app:layout_constraintBaseline_toBaselineOf="@+id/BonusQueGirdi"
        app:layout_constraintEnd_toStartOf="@+id/BonusQueGirdi" />

    <TextView
        android:id="@+id/BQResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/BonusQueGirdi"
        app:layout_constraintStart_toStartOf="@+id/BonusQueGirdi"
        app:layout_constraintTop_toBottomOf="@+id/BonusQueGirdi" />

    <TextView
        android:id="@+id/MQResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="71dp"
        android:layout_marginRight="71dp"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/Button4"
        app:layout_constraintTop_toBottomOf="@+id/Button4" />

    <EditText
        android:id="@+id/Points"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Points"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/PointsView"
        app:layout_constraintEnd_toStartOf="@+id/PointsView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/PointsView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="326dp"
        android:layout_marginRight="326dp"
        android:layout_marginBottom="72dp"
        android:textColor="#000000"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Points" />

    <TextView
        android:id="@+id/Guess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:textColor="#000000"
        android:textSize="19sp"
        app:layout_constraintEnd_toStartOf="@+id/Button4"
        app:layout_constraintStart_toStartOf="@+id/Button4"
        app:layout_constraintTop_toBottomOf="@+id/Button4" />

    <ImageView
        android:id="@+id/imageTurkey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="19dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainQuestion"
        app:srcCompat="@drawable/turkey" />

</androidx.constraintlayout.widget.ConstraintLayout>